--- a/public/styles.css
+++ b/public/styles.css
@@ -72,6 +72,7 @@ form.create-note button {
 .flexbox {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .note {
@@ -105,4 +106,26 @@ form.create-note button {
   height: 36px;
   cursor: pointer;
   outline: none;
+}
+
+footer {
+  font-family: "Nunito", sans-serif;
+  /* display: flex;
+  flex-direction: column;
+  position: relative;
+  top: 100%; */
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+
+footer p {
+  margin: 0 auto;
+  color: #514078;
+}
+
+footer a {
+  text-decoration: none;
 }
